@@ -1,7 +1,5 @@
 package uk.gov.hmcts.reform.fpl.controllers;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
@@ -12,37 +10,38 @@ import org.springframework.boot.test.autoconfigure.OverrideAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.ApplicationEventPublisher;
-import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.MvcResult;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.document.domain.Document;
+import uk.gov.hmcts.reform.fpl.enums.DirectionAssignee;
 import uk.gov.hmcts.reform.fpl.enums.OrderStatus;
 import uk.gov.hmcts.reform.fpl.events.StandardDirectionsOrderIssuedEvent;
 import uk.gov.hmcts.reform.fpl.model.CaseData;
 import uk.gov.hmcts.reform.fpl.model.Direction;
 import uk.gov.hmcts.reform.fpl.model.HearingBooking;
+import uk.gov.hmcts.reform.fpl.model.Judge;
 import uk.gov.hmcts.reform.fpl.model.Order;
 import uk.gov.hmcts.reform.fpl.model.Respondent;
 import uk.gov.hmcts.reform.fpl.model.RespondentParty;
 import uk.gov.hmcts.reform.fpl.model.common.DocmosisDocument;
+import uk.gov.hmcts.reform.fpl.model.common.DocumentReference;
 import uk.gov.hmcts.reform.fpl.model.common.Element;
 import uk.gov.hmcts.reform.fpl.model.common.JudgeAndLegalAdvisor;
 import uk.gov.hmcts.reform.fpl.service.DocmosisDocumentGeneratorService;
-import uk.gov.hmcts.reform.fpl.service.InboxLookupService;
 import uk.gov.hmcts.reform.fpl.service.UploadDocumentService;
 import uk.gov.hmcts.reform.fpl.service.ccd.CoreCaseDataService;
+import uk.gov.hmcts.reform.fpl.service.time.Time;
+import uk.gov.hmcts.reform.fpl.utils.ElementUtils;
 import uk.gov.service.notify.NotificationClient;
 
-import java.io.IOException;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Stream;
 
 import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
@@ -50,10 +49,7 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.CASE_TYPE;
 import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.JURISDICTION;
 import static uk.gov.hmcts.reform.fpl.NotifyTemplates.STANDARD_DIRECTION_ORDER_ISSUED_TEMPLATE;
@@ -65,13 +61,22 @@ import static uk.gov.hmcts.reform.fpl.enums.DirectionAssignee.OTHERS;
 import static uk.gov.hmcts.reform.fpl.enums.DirectionAssignee.PARENTS_AND_RESPONDENTS;
 import static uk.gov.hmcts.reform.fpl.enums.OrderStatus.DRAFT;
 import static uk.gov.hmcts.reform.fpl.enums.OrderStatus.SEALED;
+import static uk.gov.hmcts.reform.fpl.service.HearingBookingService.HEARING_DETAILS_KEY;
+import static uk.gov.hmcts.reform.fpl.utils.CaseDataGeneratorHelper.createHearingBooking;
 import static uk.gov.hmcts.reform.fpl.utils.DocumentManagementStoreLoader.document;
+import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.element;
+import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.wrapElements;
 
 @ActiveProfiles("integration-test")
 @WebMvcTest(DraftOrdersController.class)
 @OverrideAutoConfiguration(enabled = true)
-@SuppressWarnings("unchecked")
-class DraftOrdersControllerTest {
+class DraftOrdersControllerTest extends AbstractControllerTest {
+    private static final Long CASE_ID = 1L;
+    private static final String SEND_DOCUMENT_EVENT = "internal-change:SEND_DOCUMENT";
+    private static final DocumentReference DOCUMENT_REFERENCE = DocumentReference.builder().build();
+
+    @Mock
+    ApplicationEventPublisher applicationEventPublisher;
 
     @MockBean
     private DocmosisDocumentGeneratorService documentGeneratorService;
@@ -82,50 +87,25 @@ class DraftOrdersControllerTest {
     @MockBean
     private NotificationClient notificationClient;
 
-    @Mock
-    ApplicationEventPublisher applicationEventPublisher;
-
     @MockBean
     private CoreCaseDataService coreCaseDataService;
 
-    @MockBean
-    private InboxLookupService inboxLookupService;
-
     @Autowired
-    private MockMvc mockMvc;
+    private Time time;
 
-    @Autowired
-    private ObjectMapper mapper;
-
-    private static final String AUTH_TOKEN = "Bearer token";
-    private static final String USER_ID = "1";
+    DraftOrdersControllerTest() {
+        super("draft-standard-directions");
+    }
 
     @Test
-    void aboutToStartCallbackShouldSplitDirectionsIntoSeparateCollections() throws Exception {
-        String title = "example direction";
+    void aboutToStartCallbackShouldSplitDirectionsIntoSeparateCollectionsAndShowEmptyPlaceHolderForHearingDate() {
+        List<Direction> directions = createDirections();
 
-        List<Direction> directions = ImmutableList.of(
-            Direction.builder().directionType(title).assignee(ALL_PARTIES).build(),
-            Direction.builder().directionType(title).assignee(LOCAL_AUTHORITY).build(),
-            Direction.builder().directionType(title).assignee(PARENTS_AND_RESPONDENTS).build(),
-            Direction.builder().directionType(title).assignee(CAFCASS).build(),
-            Direction.builder().directionType(title).assignee(OTHERS).build(),
-            Direction.builder().directionType(title).assignee(COURT).build(),
-            Direction.builder().directionType(title).custom("Yes").assignee(COURT).build()
-        );
-
-        Order sdo = Order.builder().directions(buildDirections(directions)).build();
-
-        CallbackRequest request = CallbackRequest.builder()
-            .caseDetails(CaseDetails.builder()
-                .data(ImmutableMap.of("standardDirectionOrder", sdo))
-                .build())
+        CaseDetails caseDetails = CaseDetails.builder()
+            .data(Map.of("standardDirectionOrder", Order.builder().directions(buildDirections(directions)).build()))
             .build();
 
-        MvcResult response = makeRequest(request, "about-to-start");
-
-        AboutToStartOrSubmitCallbackResponse callbackResponse = mapper.readValue(response.getResponse()
-            .getContentAsByteArray(), AboutToStartOrSubmitCallbackResponse.class);
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(caseDetails);
 
         CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
 
@@ -135,39 +115,181 @@ class DraftOrdersControllerTest {
         assertThat(extractDirections(caseData.getCafcassDirections())).containsOnly(directions.get(3));
         assertThat(extractDirections(caseData.getOtherPartiesDirections())).containsOnly(directions.get(4));
         assertThat(extractDirections(caseData.getCourtDirections())).containsOnly(directions.get(5)).hasSize(1);
+        assertThat(caseData.getDateOfIssue()).isEqualTo(time.now().toLocalDate());
+
+        Stream.of(DirectionAssignee.values()).forEach(assignee ->
+            assertThat(callbackResponse.getData().get(assignee.toHearingDateField()))
+                .isEqualTo("Please enter a hearing date"));
+    }
+
+    @Test
+    void aboutToStartCallbackShouldPopulateCorrectHearingDate() {
+        LocalDateTime date = LocalDateTime.of(2020, 1, 1, 0, 0, 0);
+
+        CaseDetails caseDetails = CaseDetails.builder()
+            .data(Map.of("hearingDetails", wrapElements(createHearingBooking(date, date.plusDays(1)))))
+            .build();
+
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(caseDetails);
+
+        Stream.of(DirectionAssignee.values()).forEach(assignee ->
+            assertThat(callbackResponse.getData().get(assignee.toHearingDateField()))
+                .isEqualTo("1 January 2020, 12:00am"));
+    }
+
+    @Test
+    void shouldNotTriggerSDOEventWhenDraft() {
+        postSubmittedEvent(buildCallbackRequest(DRAFT));
+
+        verify(applicationEventPublisher, never()).publishEvent(StandardDirectionsOrderIssuedEvent.class);
+    }
+
+    @Test
+    void shouldNotTriggerSendDocumentEventWhenDraft() {
+        postSubmittedEvent(buildCallbackRequest(DRAFT));
+
+        verify(coreCaseDataService, never()).triggerEvent(any(), any(), any(), eq(SEND_DOCUMENT_EVENT), any());
+    }
+
+    @Test
+    void shouldTriggerSDOEventWhenSubmitted() throws Exception {
+        postSubmittedEvent(buildCallbackRequest(SEALED));
+
+        verify(notificationClient).sendEmail(STANDARD_DIRECTION_ORDER_ISSUED_TEMPLATE,
+            "cafcass@cafcass.com",
+            cafcassParameters(),
+            String.valueOf(CASE_ID)
+        );
+    }
+
+    @Test
+    void shouldTriggerSendDocumentEventWhenSubmitted() {
+        postSubmittedEvent(buildCallbackRequest(SEALED));
+
+        verify(coreCaseDataService).triggerEvent(JURISDICTION,
+            CASE_TYPE,
+            CASE_ID,
+            SEND_DOCUMENT_EVENT,
+            Map.of("documentToBeSent", DOCUMENT_REFERENCE));
+    }
+
+    private List<Direction> createDirections() {
+        String title = "example direction";
+
+        return List.of(
+            Direction.builder().directionType(title).assignee(ALL_PARTIES).build(),
+            Direction.builder().directionType(title).assignee(LOCAL_AUTHORITY).build(),
+            Direction.builder().directionType(title).assignee(PARENTS_AND_RESPONDENTS).build(),
+            Direction.builder().directionType(title).assignee(CAFCASS).build(),
+            Direction.builder().directionType(title).assignee(OTHERS).build(),
+            Direction.builder().directionType(title).assignee(COURT).build(),
+            Direction.builder().directionType(title).custom("Yes").assignee(COURT).build()
+        );
+    }
+
+    private Map<String, Object> cafcassParameters() {
+        return ImmutableMap.<String, Object>builder()
+            .put("title", "cafcass")
+            .put("familyManCaseNumber", "")
+            .put("leadRespondentsName", "Moley,")
+            .put("hearingDate", "20 October 2020")
+            .put("reference", String.valueOf(CASE_ID))
+            .put("caseUrl", String.format("http://fake-url/case/%s/%s/%s", JURISDICTION, CASE_TYPE, CASE_ID))
+            .build();
+    }
+
+    private ImmutableMap.Builder<String, Object> createCaseDataMap(List<Element<Direction>> directions) {
+        ImmutableMap.Builder<String, Object> builder = ImmutableMap.builder();
+
+        return builder
+            .put(LOCAL_AUTHORITY.getValue(), directions)
+            .put(ALL_PARTIES.getValue(), buildDirections(Direction.builder().assignee(ALL_PARTIES).build()))
+            .put(PARENTS_AND_RESPONDENTS.getValue(),
+                buildDirections(Direction.builder().assignee(PARENTS_AND_RESPONDENTS).build()))
+            .put(CAFCASS.getValue(), buildDirections(Direction.builder().assignee(CAFCASS).build()))
+            .put(OTHERS.getValue(), buildDirections(Direction.builder().assignee(OTHERS).build()))
+            .put(COURT.getValue(), buildDirections(Direction.builder().assignee(COURT).build()));
+    }
+
+    private List<Element<Direction>> buildDirections(List<Direction> directions) {
+        return directions.stream().map(ElementUtils::element).collect(toList());
+    }
+
+    private List<Element<Direction>> buildDirections(Direction direction) {
+        return wrapElements(direction.toBuilder().directionType("Direction").build());
+    }
+
+    private List<Direction> extractDirections(List<Element<Direction>> directions) {
+        return directions.stream().map(Element::getValue).collect(toList());
+    }
+
+    private CallbackRequest buildCallbackRequest(OrderStatus status) {
+        Order order = Order.builder()
+            .orderStatus(status)
+            .orderDoc(DOCUMENT_REFERENCE)
+            .build();
+
+        return CallbackRequest.builder()
+            .caseDetails(CaseDetails.builder()
+                .id(CASE_ID)
+                .jurisdiction(JURISDICTION)
+                .caseTypeId(CASE_TYPE)
+                .data(Map.of(
+                    HEARING_DETAILS_KEY, List.of(
+                        Element.builder()
+                            .value(HearingBooking.builder()
+                                .startDate(LocalDateTime.of(2020, 10, 20, 11, 11, 11))
+                                .endDate(LocalDateTime.of(2020, 11, 20, 11, 11, 11))
+                                .build())
+                            .build()),
+                    "respondents1", List.of(
+                        Map.of(
+                            "id", "",
+                            "value", Respondent.builder()
+                                .party(RespondentParty.builder()
+                                    .dateOfBirth(LocalDate.now().plusDays(1))
+                                    .lastName("Moley")
+                                    .relationshipToChild("Uncle")
+                                    .build())
+                                .build()
+                        )
+                    ),
+                    "standardDirectionOrder", order,
+                    "caseLocalAuthority", "example"))
+                .build())
+            .build();
     }
 
     @Nested
     class StateChangeTests {
-        private final String event = "internal-changeState:Gatekeeping->PREPARE_FOR_HEARING";
-        private final Long caseId = 1L;
+        private static final String PREPARE_FOR_HEARING_EVENT = "internal-changeState:Gatekeeping->PREPARE_FOR_HEARING";
 
         @Test
-        void submittedCallbackShouldTriggerStateChangeWhenOrderIsMarkedAsFinal() throws Exception {
+        void submittedCallbackShouldTriggerStateChangeWhenOrderIsMarkedAsFinal() {
             makeRequestWithOrderStatus(OrderStatus.SEALED);
 
-            verify(coreCaseDataService).triggerEvent(JURISDICTION, CASE_TYPE, caseId, event);
+            verify(coreCaseDataService).triggerEvent(JURISDICTION, CASE_TYPE, CASE_ID, PREPARE_FOR_HEARING_EVENT);
         }
 
         @Test
-        void submittedCallbackShouldNotTriggerStateChangeWhenOrderIsStillInDraftState() throws Exception {
+        void submittedCallbackShouldNotTriggerStateChangeWhenOrderIsStillInDraftState() {
             makeRequestWithOrderStatus(OrderStatus.DRAFT);
 
-            verify(coreCaseDataService, never()).triggerEvent(JURISDICTION, CASE_TYPE, caseId, event);
+            verify(coreCaseDataService, never()).triggerEvent(any(), any(), any(), eq(PREPARE_FOR_HEARING_EVENT));
         }
 
-        private void makeRequestWithOrderStatus(OrderStatus status) throws Exception {
-            Order order = Order.builder().orderStatus(status).build();
+        private void makeRequestWithOrderStatus(OrderStatus status) {
+            Order order = Order.builder().orderStatus(status).orderDoc(DOCUMENT_REFERENCE).build();
 
             CallbackRequest request = CallbackRequest.builder()
                 .caseDetails(CaseDetails.builder()
-                    .id(caseId)
+                    .id(CASE_ID)
                     .jurisdiction(JURISDICTION)
                     .caseTypeId(CASE_TYPE)
-                    .data(ImmutableMap.of("standardDirectionOrder", order,
+                    .data(Map.of("standardDirectionOrder", order,
                         "caseLocalAuthority", "example",
-                        "respondents1", ImmutableList.of(
-                            ImmutableMap.of(
+                        "respondents1", List.of(
+                            Map.of(
                                 "id", "",
                                 "value", Respondent.builder()
                                     .party(RespondentParty.builder()
@@ -177,8 +299,7 @@ class DraftOrdersControllerTest {
                                     .build()))))
                     .build())
                 .build();
-            String callbackType = "submitted";
-            makeRequest(request, callbackType);
+            postSubmittedEvent(request);
         }
     }
 
@@ -187,98 +308,84 @@ class DraftOrdersControllerTest {
         byte[] pdf = {1, 2, 3, 4, 5};
         Document document = document();
 
-        DocumentTests() throws IOException {
-            //NO - OP
-        }
+        private static final String SEALED_ORDER_FILE_NAME = "standard-directions-order.pdf";
+        private static final String DRAFT_ORDER_FILE_NAME = "draft-standard-directions-order.pdf";
 
         @BeforeEach
         void setup() {
-            DocmosisDocument docmosisDocument = new DocmosisDocument("standard-directions-order.pdf", pdf);
+            DocmosisDocument docmosisDocument = new DocmosisDocument(SEALED_ORDER_FILE_NAME, pdf);
 
             given(documentGeneratorService.generateDocmosisDocument(any(), any())).willReturn(docmosisDocument);
         }
 
         @Test
-        void midEventShouldGenerateDraftStandardDirectionDocument() throws Exception {
-            given(uploadDocumentService.uploadPDF(USER_ID, AUTH_TOKEN, pdf, "draft-standard-directions-order.pdf"))
+        void midEventShouldGenerateDraftStandardDirectionDocument() {
+            given(uploadDocumentService.uploadPDF(pdf, DRAFT_ORDER_FILE_NAME))
                 .willReturn(document);
 
             List<Element<Direction>> directions = buildDirections(
-                ImmutableList.of(Direction.builder()
+                List.of(Direction.builder()
+                    .directionType("direction 1")
                     .directionText("example")
                     .assignee(LOCAL_AUTHORITY)
                     .readOnly("No")
                     .build()));
 
-            CallbackRequest request = CallbackRequest.builder()
-                .caseDetails(CaseDetails.builder()
-                    .data(createCaseDataMap(directions)
-                        .put("judgeAndLegalAdvisor", JudgeAndLegalAdvisor.builder().build())
-                        .build())
+            CaseDetails caseDetails = CaseDetails.builder()
+                .data(createCaseDataMap(directions)
+                    .put("dateOfIssue", time.now().toLocalDate().toString())
+                    .put("judgeAndLegalAdvisor", JudgeAndLegalAdvisor.builder().build())
+                    .put("caseLocalAuthority", "example")
+                    .put("dateSubmitted", time.now().toLocalDate().toString())
                     .build())
                 .build();
 
-            MvcResult response = makeRequest(request, "mid-event");
+            AboutToStartOrSubmitCallbackResponse callbackResponse = postMidEvent(caseDetails);
 
-            AboutToStartOrSubmitCallbackResponse callbackResponse = mapper.readValue(response.getResponse()
-                .getContentAsByteArray(), AboutToStartOrSubmitCallbackResponse.class);
-
-            Map<String, Object> sdo = (Map<String, Object>) callbackResponse.getData().get("standardDirectionOrder");
-
-            assertThat(sdo).containsEntry(
-                "orderDoc", ImmutableMap.builder()
-                    .put("document_binary_url", document().links.binary.href)
-                    .put("document_filename", document().originalDocumentName)
-                    .put("document_url", document().links.self.href)
-                    .build());
+            assertThat(callbackResponse.getData().get("standardDirectionOrder"))
+                .extracting("orderDoc").isEqualTo(Map.of(
+                "document_binary_url", document().links.binary.href,
+                "document_filename", document().originalDocumentName,
+                "document_url", document().links.self.href
+            ));
         }
 
         @Test
-        void aboutToSubmitShouldPopulateHiddenCCDFieldsInStandardDirectionOrderToPersistData() throws Exception {
-            given(uploadDocumentService.uploadPDF(USER_ID, AUTH_TOKEN, pdf, "standard-directions-order.pdf"))
+        void aboutToSubmitShouldPopulateHiddenCCDFieldsInStandardDirectionOrderToPersistData() {
+            given(uploadDocumentService.uploadPDF(pdf, SEALED_ORDER_FILE_NAME))
                 .willReturn(document);
 
             UUID uuid = UUID.randomUUID();
 
-            List<Element<Direction>> fullyPopulatedDirection = ImmutableList.of(Element.<Direction>builder()
-                .id(uuid)
-                .value(Direction.builder()
+            List<Element<Direction>> fullyPopulatedDirection = List.of(
+                element(uuid, Direction.builder()
                     .directionType("Identify alternative carers")
                     .directionText("Contact the parents to make sure there is a complete family tree showing family"
                         + " members who could be alternative carers.")
                     .assignee(LOCAL_AUTHORITY)
                     .directionRemovable("Yes")
                     .readOnly("Yes")
-                    .directionRemovable("No")
-                    .build())
-                .build());
+                    .build()));
 
-            List<Element<Direction>> directionWithShowHideValuesRemoved = ImmutableList.of(Element.<Direction>builder()
-                .id(uuid)
-                .value(Direction.builder()
-                    .directionType("Identify alternative carers")
-                    .assignee(LOCAL_AUTHORITY)
-                    .readOnly("Yes")
-                    .build())
-                .build());
+            List<Element<Direction>> directionWithShowHideValuesRemoved = buildDirectionWithShowHideValuesRemoved(uuid);
 
-            Order order = Order.builder()
-                .orderStatus(OrderStatus.SEALED)
-                .build();
-
-            CallbackRequest request = CallbackRequest.builder()
-                .caseDetails(CaseDetails.builder()
-                    .data(createCaseDataMap(directionWithShowHideValuesRemoved)
-                        .put("standardDirectionOrder", order)
-                        .put("judgeAndLegalAdvisor", JudgeAndLegalAdvisor.builder().build())
-                        .build())
+            CaseDetails caseDetails = CaseDetails.builder()
+                .data(createCaseDataMap(directionWithShowHideValuesRemoved)
+                    .put("dateOfIssue", time.now().toLocalDate().toString())
+                    .put("standardDirectionOrder", Order.builder().orderStatus(SEALED).build())
+                    .put("judgeAndLegalAdvisor", JudgeAndLegalAdvisor.builder().build())
+                    .put("allocatedJudge", Judge.builder().build())
+                    .put(HEARING_DETAILS_KEY, wrapElements(HearingBooking.builder()
+                        .startDate(LocalDateTime.of(2020, 10, 20, 11, 11, 11))
+                        .endDate(LocalDateTime.of(2020, 11, 20, 11, 11, 11))
+                        .venue("EXAMPLE")
+                        .build()))
+                    .put("caseLocalAuthority", "example")
+                    .put("dateSubmitted", time.now().toLocalDate().toString())
                     .build())
                 .build();
 
-            MvcResult response = makeRequest(request, "about-to-submit");
-
-            AboutToStartOrSubmitCallbackResponse callbackResponse = mapper.readValue(response.getResponse()
-                .getContentAsByteArray(), AboutToStartOrSubmitCallbackResponse.class);
+            AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToSubmitEvent(caseDetails);
 
             CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
 
@@ -292,109 +399,49 @@ class DraftOrdersControllerTest {
             assertThat(caseData.getStandardDirectionOrder().getJudgeAndLegalAdvisor()).isNotNull();
             assertThat(caseData.getJudgeAndLegalAdvisor()).isNull();
         }
-    }
 
-    @Test
-    void shouldNotTriggerSDOEventWhenDraft() throws Exception {
-        makeRequest(buildCallbackRequest(DRAFT), "submitted");
+        @Test
+        void aboutToSubmitShouldReturnErrorsWhenNoHearingDetailsExistsForSealedOrder() {
+            given(uploadDocumentService.uploadPDF(pdf, SEALED_ORDER_FILE_NAME))
+                .willReturn(document());
 
-        verify(applicationEventPublisher, times(0)).publishEvent(StandardDirectionsOrderIssuedEvent.class);
-    }
+            UUID uuid = UUID.randomUUID();
 
-    @Test
-    void shouldTriggerSDOEventWhenSubmitted() throws Exception {
-        makeRequest(buildCallbackRequest(SEALED), "submitted");
+            List<Element<Direction>> directionWithShowHideValuesRemoved = buildDirectionWithShowHideValuesRemoved(uuid);
 
-        verify(notificationClient, times(1)).sendEmail(
-            eq(STANDARD_DIRECTION_ORDER_ISSUED_TEMPLATE), eq("cafcass@cafcass.com"),
-            eq(cafcassParameters()), eq("12345")
-        );
-    }
+            CaseDetails caseDetails = CaseDetails.builder()
+                .data(createCaseDataMap(directionWithShowHideValuesRemoved)
+                    .put("standardDirectionOrder", Order.builder().orderStatus(SEALED).build())
+                    .put("judgeAndLegalAdvisor", JudgeAndLegalAdvisor.builder().build())
+                    .put("allocatedJudge", Judge.builder().build())
+                    .build())
+                .build();
 
-    private Map<String, Object> cafcassParameters() {
-        return ImmutableMap.<String, Object>builder()
-            .put("title", "cafcass")
-            .put("familyManCaseNumber", "")
-            .put("leadRespondentsName", "Moley,")
-            .put("hearingDate", "20 October 2020")
-            .put("reference", "12345")
-            .put("caseUrl", "http://fake-url/case/" + JURISDICTION + "/" + CASE_TYPE + "/12345")
-            .build();
-    }
+            AboutToStartOrSubmitCallbackResponse response = postAboutToSubmitEvent(caseDetails);
 
-    private MvcResult makeRequest(CallbackRequest request, String endpoint) throws Exception {
-        return mockMvc
-            .perform(post("/callback/draft-standard-directions/" + endpoint)
-                .header("authorization", AUTH_TOKEN)
-                .header("user-id", USER_ID)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(mapper.writeValueAsString(request)))
-            .andExpect(status().isOk())
-            .andReturn();
-    }
+            assertThat(response.getErrors())
+                .containsOnly("You need to enter a hearing date.");
+        }
 
-    private ImmutableMap.Builder createCaseDataMap(List<Element<Direction>> directions) {
-        ImmutableMap.Builder builder = ImmutableMap.<String, Object>builder();
+        @Test
+        void aboutToSubmitShouldReturnErrorsWhenNoAllocatedJudgeExistsForSealedOrder() {
+            given(uploadDocumentService.uploadPDF(pdf, SEALED_ORDER_FILE_NAME))
+                .willReturn(document());
 
-        return builder
-            .put(LOCAL_AUTHORITY.getValue(), directions)
-            .put(ALL_PARTIES.getValue(), buildDirections(Direction.builder().assignee(ALL_PARTIES).build()))
-            .put(PARENTS_AND_RESPONDENTS.getValue(),
-                buildDirections(Direction.builder().assignee(PARENTS_AND_RESPONDENTS).build()))
-            .put(CAFCASS.getValue(), buildDirections(Direction.builder().assignee(CAFCASS).build()))
-            .put(OTHERS.getValue(), buildDirections(Direction.builder().assignee(OTHERS).build()))
-            .put(COURT.getValue(), buildDirections(Direction.builder().assignee(COURT).build()));
-    }
+            CallbackRequest request = buildCallbackRequest(SEALED);
 
-    private List<Element<Direction>> buildDirections(List<Direction> directions) {
-        return directions.stream().map(direction -> Element.<Direction>builder()
-            .id(UUID.randomUUID())
-            .value(direction)
-            .build())
-            .collect(toList());
-    }
+            AboutToStartOrSubmitCallbackResponse response = postAboutToSubmitEvent(request);
 
-    private List<Element<Direction>> buildDirections(Direction direction) {
-        return ImmutableList.of(Element.<Direction>builder()
-            .id(UUID.randomUUID())
-            .value(direction)
-            .build());
-    }
+            assertThat(response.getErrors())
+                .containsOnly("You need to enter the allocated judge.");
+        }
 
-    private List<Direction> extractDirections(List<Element<Direction>> directions) {
-        return directions.stream().map(Element::getValue).collect(toList());
-    }
-
-    private CallbackRequest buildCallbackRequest(OrderStatus status) {
-        Order order = Order.builder()
-            .orderStatus(status)
-            .build();
-
-        return CallbackRequest.builder()
-            .caseDetails(CaseDetails.builder()
-                .id(12345L)
-                .data(ImmutableMap.of(
-                    "hearingDetails", ImmutableList.of(
-                        Element.builder()
-                            .value(HearingBooking.builder()
-                                .startDate(LocalDateTime.of(2020, 10, 20, 11, 11, 11))
-                                .endDate(LocalDateTime.of(2020, 11, 20, 11, 11, 11))
-                                .build())
-                            .build()),
-                    "respondents1", ImmutableList.of(
-                        ImmutableMap.of(
-                            "id", "",
-                            "value", Respondent.builder()
-                                .party(RespondentParty.builder()
-                                    .dateOfBirth(LocalDate.now().plusDays(1))
-                                    .lastName("Moley")
-                                    .build())
-                                .build()
-                        )
-                    ),
-                    "standardDirectionOrder", order,
-                    "caseLocalAuthority", "example"))
-                .build())
-            .build();
+        private List<Element<Direction>> buildDirectionWithShowHideValuesRemoved(UUID uuid) {
+            return List.of(element(uuid, Direction.builder()
+                .directionType("Identify alternative carers")
+                .assignee(LOCAL_AUTHORITY)
+                .readOnly("Yes")
+                .build()));
+        }
     }
 }
